<resources>
    <string name="app_name">WhereYouAt</string>
    <string name="google_maps_key">AIzaSyA-cxB44vGBgTj4AAEmyl3Wr3-3DLLYrFU</string>
    <!--<string name="google_maps_key">AIzaSyDHaFYs8cUyI1Ta5RtOxhg1pXPAd2W9RBs</string>-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Where You At?!</string>
    <string name="nav_header_subtitle">Version 1.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="join_create_group_frag_message">You can join an existing group or create your own!</string>
    <string name="title_activity_not_signed_in">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="not_signed_in_activity_main_text">You are not currently signed in.  Click below and we will get that fixed up.</string>
    <string name="btn_signin_text">Sign In</string>
    <string name="action_signinorout">sign in/out bitch</string>
    <string name="not_in_trip_msg">Not currently in a group.</string>
    <string name="service_status">Service is not currently running</string>

    <!-- NOTIFICATION CHANNEL STUFF -->
    <string name="low_priority_notification_channel_name">com.fimbleenterprises.whereuat.low_priority_notification_channel_name</string>
    <string name="low_priority_notification_channel_description">com.fimbleenterprises.whereuat.low_priority_notification_channel_description</string>
    <string name="high_priority_notification_channel_name">com.fimbleenterprises.whereuat.high_priority_notification_channel_name</string>
    <string name="high_priority_notification_channel_description">com.fimbleenterprises.whereuat.high_priority_notification_channel_description</string>
    <string name="member_options_add_to_contacts">Add to contacts...</string>
    <string name="member_options_view_on_map">View on map</string>
    <string name="member_options_call">Call...</string>
    <string name="member_options_request_loc_update">Request updated location</string>
    <string name="member_options_message">Send message...</string>
    <string name="enter_trip_code_hint">Enter code</string>
    <string name="join_button_text">Join</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="send_message_button_text">Send</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="alert_options_pick_spot">Pick spot...</string>
    <string name="alert_options_close_to_me">Within range of me</string>
    <string name="menu_join_create">Join/Create</string>
</resources>