<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="#00000000"
	android:orientation="vertical">

	<LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/round_container_black_border"
	android:orientation="vertical">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#FFFFFF"
		android:paddingLeft="1dp"
		android:paddingTop="1dp"
		android:paddingRight="1dp"
		android:visibility="visible">

		<TextView
			android:id="@+id/TextView_TripOptionsMainText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:fontFamily="casual"
			android:gravity="center_horizontal"
			android:text="What would you like to do?"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:visibility="gone" />

	</RelativeLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#FFFFFF"
		android:paddingLeft="1dp"
		android:paddingRight="1dp"
		android:paddingBottom="1dp">

		<TableLayout
			android:id="@+id/TableLayout_StartStop"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_marginTop="1dp"
			android:paddingTop="2dp"
			android:paddingBottom="2dp">

			<TableRow
				android:id="@+id/tableRow_requestUpdate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">

				<FrameLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1">

					<Button
						android:id="@+id/btn_request_location_update"
						style="@style/ButtonTextWhiteShadow"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="2dp"
						android:background="@drawable/btn_glass_gray_black_border"
						android:drawableTop="@android:drawable/ic_menu_mapmode"
						android:drawablePadding="1dp"
						android:fontFamily="casual"
						android:paddingTop="5dp"
						android:text="@string/member_options_request_loc_update"
						android:textColor="#000000" />

				</FrameLayout>

			</TableRow>

			<TableRow
				android:id="@+id/tableRow_messageUser"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">

				<FrameLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1">

					<Button
						android:id="@+id/btn_message_user"
						style="@style/ButtonTextWhiteShadow"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="2dp"
						android:background="@drawable/btn_glass_gray_black_border"
						android:drawableTop="@drawable/chat_icon2_32x32"
						android:drawablePadding="1dp"
						android:fontFamily="casual"
						android:paddingTop="5dp"
						android:text="@string/member_options_message"
						android:textColor="#000000" />

				</FrameLayout>

			</TableRow>

			<TableRow
				android:id="@+id/tableRow2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">

				<FrameLayout
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1">

					<Button
						android:id="@+id/btn_add_to_contacts"
						style="@style/ButtonTextWhiteShadow"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_margin="2dp"
						android:background="@drawable/btn_glass_gray_black_border"
						android:drawableTop="@drawable/abook"
						android:drawablePadding="2dp"
						android:fontFamily="casual"
						android:paddingTop="4dp"
						android:text="@string/member_options_add_to_contacts"
						android:textColor="#000000" />

				</FrameLayout>

			</TableRow>

			<TableRow
				android:id="@+id/tableRowShare"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">

				<FrameLayout
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1">

					<Button
						android:id="@+id/btn_view_on_map"
						style="@style/ButtonTextWhiteShadow"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_margin="2dp"
						android:background="@drawable/btn_glass_gray_black_border"
						android:drawableTop="@android:drawable/ic_menu_mapmode"
						android:drawablePadding="2dp"
						android:fontFamily="casual"
						android:paddingTop="4dp"
						android:text="@string/member_options_view_on_map"
						android:textColor="#000000" />

				</FrameLayout>

			</TableRow>

			<TableRow
				android:id="@+id/tableRow_businessPhone"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">

				<FrameLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1">

					<Button
						android:id="@+id/btn_call_member"
						style="@style/ButtonTextWhiteShadow"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="2dp"
						android:background="@drawable/btn_glass_gray_black_border"
						android:drawableTop="@android:drawable/ic_menu_call"
						android:drawablePadding="1dp"
						android:fontFamily="casual"
						android:paddingTop="5dp"
						android:text="@string/member_options_call"
						android:textColor="#000000" />

				</FrameLayout>

			</TableRow>

		</TableLayout>
	</RelativeLayout>
</LinearLayout>

</LinearLayout>